--- a/LiCi/routines/example_routine.yaml
+++ b/LiCi/routines/example_routine.yaml
@@ -1,3 +1,3 @@
 name: Example Routine
-repo: https://github.com/SteveKipp/LiCi.git
-build_commands: python -V
+repo: https://github.com/SteveKipp/lici_example.git
+build_commands: python hello_from_lici.py
